# career-hub

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/skills/apply/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CREDITS.md  SCANNER.md  SKILL_APPLY.md
examples/: config.toml
examples/profiles/: PROFILE_DATA_ANALYST.md  PROFILE_PRODUCT_MANAGER.md
src/jobsearch/: __init__.py  __main__.py  apply.py  config.py  cover_letter.py  cv_builder.py  database.py  fit_analyzer.py  init_cmd.py  profiles.py  scanner.py  scanner_apify.py  web.py
src/jobsearch/templates/: .env.example  .gitignore  CLAUDE.md  START_HERE.md  config.toml  portals.yml
src/jobsearch/templates/_brain/: CLAUDE.md  INSIGHTS.md  SESSION_START.md  USER_CONTEXT.md
src/jobsearch/templates/applications/: CLAUDE.md
src/jobsearch/templates/applications/_template/: post-mortem-template.md
src/jobsearch/templates/certificates/: CLAUDE.md
src/jobsearch/templates/certificates/_template/: certificate-template.md
src/jobsearch/templates/cvs/: CLAUDE.md
src/jobsearch/templates/cvs/_template/: cv-structure-template.md
src/jobsearch/templates/documentation_hub/: CLAUDE.md
src/jobsearch/templates/documentation_hub/_template/: case-study-template.md
src/jobsearch/templates/personal_brand/: CLAUDE.md
src/jobsearch/templates/personal_brand/_template/: brand-discovery-template.md  content-strategy-template.md  voice-and-tone-template.md
src/jobsearch/templates/profiles/: CLAUDE.md  PROFILE_DATA.md  PROFILE_PRODUCT.md
src/jobsearch/templates/profiles/_template/: profile-interview-template.md
src/jobsearch/templates/roles/: CLAUDE.md
src/jobsearch/templates/roles/_template/: role-criteria-template.md
src/jobsearch/templates/work_experience/: CLAUDE.md
src/jobsearch/templates/work_experience/_template/: star-interview-template.md
tests/: conftest.py  test_config.py  test_cover_letter.py  test_database.py  test_fit_analyzer.py  test_init_cmd.py  test_jd_signals.py  test_profiles.py  test_role_filters.py
